# why2025-badge-firmware

./: .gitignore  partitions.csv  sdkconfig  sdkconfig.defaults  upload.sh
apps/: CMakeLists.txt
apps/minimal_ota/: minimal_ota.c
badgevms/: CMakeLists.txt  application.c  buddy_alloc.c  init.c  memory.c  symbols.yml  task.c  why2025_firmware.c  wrapped_funcs.c  wrapped_funcs.h
badgevms/drivers/: bosch_bme690.c  bosch_bme690.h  bosch_bmi270.c  wifi.c
badgevms/drivers/esp-serial-flasher/: slave_c6_flasher.c  why2025_firmware.c  why2025_firmware.h
badgevms/include/badgevms/: device.h  misc_funcs.h  process.h  wifi.h
components/bme690/: CMakeLists.txt  bme690.c  bme690.h  bme690_helper.c  bme690_helper.h
components/bme690/examples/bme69x_espidf_test_app/: .gitignore
components/bme690/examples/bme69x_espidf_test_app/main/: bme69x_test.c
components/elf_loader/src/: esp_elf.c
components/esp_hw_support/: esp_memory_utils.c
components/esp_hw_support/port/esp32p4/: Kconfig.ldo  rtc_clk.c
components/esp_psram/device/: esp_psram_impl_ap_hex.c
components/esp_psram/esp32p4/: Kconfig.spiram
components/esp_tca8418/: esp_tca8418.c
components/freertos/config/include/freertos/: FreeRTOSConfig.h
components/sdl3/src/: SDL_malloc.c
components/why_ota/: CMakeLists.txt  idf_component.yml  ota.c  ota_utils.c
components/why_ota/includes/: ota.h  ota_utils.h
compute_badgevms/: CMakeLists.txt  why2025_firmware.c
compute_badgevms/drivers/: bosch_bmi270.c
compute_badgevms/include/badgevms/: device.h
compute_badgevms_sdk_apps/: CMakeLists.txt
compute_badgevms_sdk_apps/bmi270_test/: bmi270_test.c
flash_storage/skel/: init.toml
include/: lvgl.h
include/badgevms/: ota.h
include/lvgl/: lv_conf_internal.h
main/: CMakeLists.txt  compositor.c  idf_component.yml  memory.c  memory.h  ota.c  ota.h  symbols.yml  task.c  task.h  why2025_firmware.c  wrapped_funcs.c
main/drivers/: st7703.c  st7703.h  tca8418.c
main/test_elf/: bench_basic_b.c  lvgl_test.c
sdk_apps/: CMakeLists.txt
sdk_apps/arkanoid/: arkanoid.c  manifest.json
sdk_apps/badgevms_launcher/: main.c
sdk_apps/bme690_test/: bme690_test.c  manifest.json
sdk_apps/bmi270_test/: bmi270_test.c
sdk_apps/cyb3rk4t_term/: build_mac.sh  font_leggie_9x18.h  font_terminus_10x20.h  font_terminus_8x16.h  main.c  manifest.json
sdk_apps/hardware_test/: run_tests.c
sdk_apps/hello/: hello.c  main.c
sdk_apps/hello_flasher/: hello_flasher.c
sdk_apps/ota_wifi_update/: ota_wifi_update.c
sdk_apps/sshterm/: ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.sh  build_mac.sh  main.c  manifest.json
sdk_apps/sshterm/common/: app_state.h  types.h
sdk_apps/sshterm/components/app_controller/: app_controller.c  app_controller.h
sdk_apps/sshterm/components/input_system/: input_system.c  input_system.h
sdk_apps/sshterm/components/keyboard/: keyboard.c  keyboard.h
sdk_apps/sshterm/components/renderer/: font_leggie_9x18.h  renderer.c  renderer.h
sdk_apps/sshterm/components/ssh_client/: libssh2_config.h  mbedtls_config_optimized.h  ssh_client.c  ssh_client.h
sdk_apps/sshterm/components/ssh_manager/: ssh_manager.c  ssh_manager.h
sdk_apps/sshterm/components/term/: term.c  term.h  terminal_config.h
sdk_apps/sshterm/components/test_mode/: test_mode.c  test_mode.h
sdk_apps/sshterm/components/ui_manager/: ui_manager.c  ui_manager.h
sdk_apps/tetris/: Makefile  main.c  tetris
sdk_apps/why2025_ota/: main.c  window.c
sdk_apps/wifi_setup/: manifest.json  wifi_setup.c
sdk_include/sys/: socket.h
